# bro-zeromq-writer

./: CMakeLists.txt  COPYING  README  configure  configure.plugin
cmake/: FindZeroMQ.cmake
scripts/: __load__.zeek  init.bro  init.zeek
scripts/NCSA/ZeroMQWriter/: __load__.bro  logs-to-zeromq.bro  logs-to-zeromq.zeek
src/: Plugin.cc  Plugin.h  ZeroMQ.cc  ZeroMQ.h  zeromqwriter.bif
tests/: btest.cfg
tests/Baseline/zeromqwriter.show-plugin/: output
tests/Scripts/: get-zeek-env
tests/zeromqwriter/: show-plugin.bro
